// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteItemFromDays deletes an existing item and returns new arrays 1`] = `
Array [
  Array [
    "2018-01-01",
    Array [
      Object {
        "uniqueId": 1,
      },
      Object {
        "uniqueId": 2,
      },
    ],
  ],
  Array [
    "2018-01-02",
    Array [
      Object {
        "uniqueId": 4,
      },
    ],
  ],
]
`;

exports[`deleteItemFromDays deletes the day if it is empty 1`] = `
Array [
  Array [
    "2018-01-01",
    Array [
      Object {
        "uniqueId": 1,
      },
      Object {
        "uniqueId": 2,
      },
    ],
  ],
  Array [
    "2018-01-02",
    Array [
      Object {
        "uniqueId": 4,
      },
    ],
  ],
]
`;

exports[`deleteItemFromDays returns days if item does not exist 1`] = `
Array [
  Array [
    "2018-01-01",
    Array [
      Object {
        "uniqueId": 1,
      },
      Object {
        "uniqueId": 2,
      },
    ],
  ],
  Array [
    "2018-01-02",
    Array [
      Object {
        "uniqueId": 3,
      },
      Object {
        "uniqueId": 4,
      },
    ],
  ],
]
`;
